intento de conseguri los hastags

--- a/app/src/main/res/layout/content_new_advertisement.xml
+++ b/app/src/main/res/layout/content_new_advertisement.xml
@@ -150,6 +150,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp">
+                <AutoCompleteTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/sugg_hashtag"
+                    android:hint="@string/noTag" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
                 <EditText
                     android:id="@+id/input_hashtags"
                     android:layout_width="match_parent"
