--- a/app/src/main/res/layout/content_edit_profile.xml
+++ b/app/src/main/res/layout/content_edit_profile.xml
@@ -97,7 +97,8 @@
                 android:layout_width="34dp"
                 android:layout_height="wrap_content"
                 android:background="@android:drawable/ic_menu_add"
-                android:layout_weight="0.33" />
+                android:layout_weight="0.33"
+                android:onClick="addInterest" />
 
         </LinearLayout>
 
