--- a/app/src/main/res/layout/content_edit_profile.xml
+++ b/app/src/main/res/layout/content_edit_profile.xml
@@ -64,7 +64,8 @@
             android:name="com.google.android.gms.maps.MapFragment"
             android:id="@+id/edit_profile_map"
             android:layout_width="match_parent"
-            android:layout_height="159dp" />
+            android:layout_height="200dp"
+            android:layout_weight="2.35" />
 
         <Space
             android:layout_width="match_parent"
@@ -88,16 +89,15 @@
             android:weightSum="1">
 
             <EditText
-                android:layout_width="279dp"
+                android:layout_width="224dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/edit_profile_et_interests"
-                android:layout_gravity="center"
-                android:layout_weight="0.53" />
+                android:layout_gravity="center" />
             <Button
                 android:layout_width="34dp"
                 android:layout_height="wrap_content"
                 android:background="@android:drawable/ic_menu_add"
-                android:layout_weight="0.33"
+                android:layout_weight="0.26"
                 android:onClick="addInterest" />
 
         </LinearLayout>
