--- a/app/src/main/res/layout/activity_single_chat.xml
+++ b/app/src/main/res/layout/activity_single_chat.xml
@@ -67,8 +67,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="10"
-            android:background="#ffffff"
-            android:layout_margin="5dp"
+            android:background="@drawable/bar_bg"
             android:gravity="center_vertical|center_horizontal">
 
             <EditText
@@ -87,7 +86,7 @@
             <ImageButton
                 android:id="@+id/send"
                 android:layout_width="43dp"
-                android:layout_height="match_parent"
+                android:layout_height="43dp"
                 android:text="@string/send_message"
                 android:src="@android:drawable/ic_menu_send"
                 android:background="@drawable/round_button"
