--- a/app/src/main/res/layout/content_new_advertisement.xml
+++ b/app/src/main/res/layout/content_new_advertisement.xml
@@ -87,7 +87,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/input_title"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:textStyle="italic" />
             </android.support.design.widget.TextInputLayout>
 
             <!-- Description -->
@@ -102,7 +103,8 @@
                     android:inputType="textMultiLine"
                     android:ems="10"
                     android:id="@+id/input_description"
-                    android:hint="@string/input_description"/>
+                    android:hint="@string/input_description"
+                    android:textStyle="italic" />
             </android.support.design.widget.TextInputLayout>
 
             <!-- Type Spinner -->
@@ -129,7 +131,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textCapWords"
                     android:hint="@string/input_price"
-                    />
+                    android:textStyle="italic" />
             </android.support.design.widget.TextInputLayout>
 
             <!-- Category Spinner -->
@@ -151,10 +153,12 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp">
                 <AutoCompleteTextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/sugg_hashtag"
-                    android:hint="@string/noTag" />
+                    android:hint="@string/noTag"
+                    android:textColor="@color/abc_input_method_navigation_guard"
+                    android:textStyle="italic" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -168,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textCapWords"
                     android:hint="@string/input_hashtags"
-                    />
+                    android:textStyle="italic" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.v7.widget.AppCompatButton
