El dropdown ya no suda de tu cara

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,11 @@
         <item name="android:background">#5fa3d0</item>
     </style>
 
+    <style name="PopupMenuStyle" parent="Theme.AppCompat.Light">
+
+        <item name="android:background">@color/sugg_back_color</item>
+        <item name="android:textColor">@color/sugg_text_color</item>
+
+    </style>
+
 </resources>
