--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="app_header_color">#ffffff</color>
     <color name="login_button_color">#0073e5</color>
     <color name="reg_color">#f2f2f2</color>
+    <color name="sugg_back_color">#ffffff</color>
+    <color name="sugg_text_color">#000000</color>
 </resources>
