--- a/app/src/main/res/layout/content_new_advertisement.xml
+++ b/app/src/main/res/layout/content_new_advertisement.xml
@@ -3,9 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true"
-
-
-
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -151,11 +148,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:imeOptions="actionDone"
                 android:layout_marginBottom="8dp">
                 <AutoCompleteTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/sugg_hashtag"
+                    android:singleLine="true"
+                    android:imeOptions="actionDone"
                     android:hint="@string/noTag"
                     android:textColor="@color/abc_input_method_navigation_guard"
                     android:textStyle="italic" />
