Arreglar bugget de missatge en espai en blanc hehe, arreglat bug amb els listeners

--- a/app/src/main/res/menu/menu_option_single_chat.xml
+++ b/app/src/main/res/menu/menu_option_single_chat.xml
@@ -12,6 +12,11 @@
         android:title="@string/action_send_offer"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_view_offers"
+        android:orderInCategory="100"
+        android:title="@string/action_view_offers"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_block_user"
         android:orderInCategory="100"
         android:title="@string/action_block_user"
