--- a/app/src/main/res/layout/content_view_advert.xml
+++ b/app/src/main/res/layout/content_view_advert.xml
@@ -131,6 +131,7 @@
                         android:id="@+id/advert_name_user"
                         android:layout_gravity="center"
                         android:textStyle="bold"
+                        android:onClick="goToUser"
                         android:textSize="15dp"
                         android:layout_weight="80"
                         android:text="XDDD" />
@@ -140,6 +141,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/advert_user_image"
                         android:src="@drawable/image_placeholder"
+                        android:onClick="goToUser"
                         android:layout_weight="15" />
 
                 </LinearLayout>
