--- a/app/src/main/res/layout/left_chat.xml
+++ b/app/src/main/res/layout/left_chat.xml
@@ -8,7 +8,7 @@ android:layout_height="match_parent">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="left"
-    android:layout_marginBottom="5dp"
+    android:layout_marginBottom="2dp"
     android:layout_marginRight="20dp"
     android:background="@drawable/chat_desing"
     android:paddingBottom="8dp"
@@ -16,5 +16,6 @@ android:layout_height="match_parent">
     android:paddingRight="10dp"
     android:paddingTop="5dp"
     android:text="Sampleleft"
-    android:textColor="#000" />
+    android:textColor="#000"
+    android:layout_marginTop="2dp" />
 </RelativeLayout>
