--- a/app/src/main/res/layout/right_chat.xml
+++ b/app/src/main/res/layout/right_chat.xml
@@ -4,18 +4,33 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical">
 
-<TextView
-    android:id="@+id/msgr"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="right"
-    android:layout_marginBottom="8dp"
-    android:layout_marginLeft="20dp"
-    android:background="@drawable/chat_desing"
-    android:paddingBottom="5dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="5dp"
-    android:text="Sample"
-    android:textColor="#000" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right">
+
+        <TextView
+        android:id="@+id/msgr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+            android:background="@drawable/chat_desing"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
+        android:text="Sample"
+        android:textColor="#000"
+            android:layout_gravity="center|right"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/readImg"
+            android:src="@drawable/abc_btn_check_to_on_mtrl_015"
+            android:layout_gravity="right" />
+    </LinearLayout>
+
 </LinearLayout>
