Arreglat errors de firebase amb les ofertes

--- a/app/src/main/res/layout/dialog_send_offer.xml
+++ b/app/src/main/res/layout/dialog_send_offer.xml
@@ -28,6 +28,25 @@
         android:textSize="20dp"
         android:id="@+id/tvSetOffer" />
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/layoutMyAdvs">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView" >
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:id="@+id/listViewMyAdvs"
+                android:choiceMode="singleChoice"/>
+        </ScrollView>
+    </LinearLayout>
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
