--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="login_button_color">#0073e5</color>
     <color name="reg_color">#f2f2f2</color>
     <color name="my_chat_color">#69ff04</color>
+    <color name="default_color">#ffffff</color>
+    <color name="pressed_color">#04ffe2</color>
 </resources>
