--- a/app/src/main/res/layout/content_new_advertisement.xml
+++ b/app/src/main/res/layout/content_new_advertisement.xml
@@ -105,6 +105,14 @@
             </android.support.design.widget.TextInputLayout>
 
             <!-- Type Spinner -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/type_ad"
+                android:id="@+id/textView14"
+                android:textSize="19dp" />
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -129,7 +137,7 @@
                     android:id="@+id/sugg_hashtag_ex"
                     android:singleLine="true"
                     android:imeOptions="actionDone"
-                    android:hint="@string/noTag"
+                    android:hint="@string/noExTag"
                     android:textColor="@color/abc_input_method_navigation_guard"
                     android:textStyle="italic" />
             </android.support.design.widget.TextInputLayout>
@@ -166,6 +174,14 @@
             </android.support.design.widget.TextInputLayout>
 
             <!-- Category Spinner -->
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/cat_adv"
+                android:id="@+id/textView9"
+                android:textSize="19dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
