--- a/app/src/main/res/layout/content_view_profile.xml
+++ b/app/src/main/res/layout/content_view_profile.xml
@@ -17,12 +17,12 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:id="@+id/ivUserImage"
-            android:layout_gravity="center"
             android:scaleType="centerCrop"
             android:layout_below="@+id/tvUserName"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:paddingTop="15dp" />
+            android:layout_marginTop="5dp"
+            android:paddingTop="15dp"
+            android:layout_marginBottom="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
