--- a/app/src/main/res/menu/menu_view_adv.xml
+++ b/app/src/main/res/menu/menu_view_adv.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_open_chat"
+        android:id="@+id/action_report_adv"
         android:orderInCategory="100"
-        android:title="@string/action_open_chat"
+        android:title="@string/action_report"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_tagmatch"
