--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -13,7 +13,8 @@
         card_view:cardElevation="4dp"
         card_view:cardUseCompatPadding="true"
         android:clickable="false"
-        android:contextClickable="false">
+        android:contextClickable="false"
+        android:id="@+id/content_card">
 
     <RelativeLayout
         android:layout_width="wrap_content"
