--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,10 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/nav_myAdverts" />
         <item
+            android:id="@+id/nav_my_favs"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/nav_myFAVs" />
+        <item
             android:id="@+id/nav_xats"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/nav_xats" />
