Ya hay pantalla de carga en las pagians principales. Varios bugs arreglados

--- a/app/src/main/res/layout/activity_my_adverts.xml
+++ b/app/src/main/res/layout/activity_my_adverts.xml
@@ -40,6 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:textSize="19dp"
+            android:textStyle="bold"
             android:id="@+id/text_loading" />
 
     </RelativeLayout>
