--- a/app/src/main/res/layout/content_password_recover.xml
+++ b/app/src/main/res/layout/content_password_recover.xml
@@ -34,6 +34,7 @@
             <EditText android:id="@+id/input_user_recov"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/app_header_color"
                 android:hint="@string/user_name"
                 android:inputType="textPersonName" />
         </android.support.design.widget.TextInputLayout>
