--- a/app/src/main/res/layout/content_recover_second_step.xml
+++ b/app/src/main/res/layout/content_recover_second_step.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/app_header"
+            android:id="@+id/app_header_secondstep"
             android:layout_marginBottom="36dp"
             android:layout_gravity="center_horizontal"
             android:text="@string/last_step"
@@ -35,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:textColor="@color/app_header_color"
                 android:hint="@string/rec_user_password"/>
         </android.support.design.widget.TextInputLayout>
 
@@ -48,6 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:textColor="@color/app_header_color"
                 android:hint="@string/rec2_user_password"/>
         </android.support.design.widget.TextInputLayout>
 
