--- a/app/src/main/res/layout/content_registration.xml
+++ b/app/src/main/res/layout/content_registration.xml
@@ -33,6 +33,7 @@
             <EditText android:id="@+id/registrationUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/app_header_color"
                 android:inputType="textCapWords"
                 android:hint="@string/registration_hint_username" />
         </android.support.design.widget.TextInputLayout>
@@ -45,6 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
+                android:textColor="@color/app_header_color"
                 android:hint="@string/registration_hint_mail" />
         </android.support.design.widget.TextInputLayout>
 
@@ -55,6 +57,7 @@
             <EditText android:id="@+id/registrationPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/app_header_color"
                 android:inputType="textPassword"
                 android:hint="@string/registration_hint_password"/>
         </android.support.design.widget.TextInputLayout>
@@ -66,6 +69,7 @@
             <EditText android:id="@+id/registrationPasswordConfirm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/app_header_color"
                 android:inputType="textPassword"
                 android:hint="@string/registration_hint_password_confirm"/>
         </android.support.design.widget.TextInputLayout>
