--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -21,7 +21,7 @@
             android:padding="12dp"
             android:text="@string/password_change"
             android:onClick="goToPasswordChange"
-            android:background="@color/login_button_color"
+            android:background="@color/sky"
             android:textColor="@color/app_header_color" />
 
     </LinearLayout>
