--- a/app/src/main/res/layout/activity_single_chat.xml
+++ b/app/src/main/res/layout/activity_single_chat.xml
@@ -43,14 +43,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/deny_offer"
                     android:id="@+id/bCancelOffert"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="center|right" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/accept"
                     android:id="@+id/bAcceptOffer"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="center|right" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -58,7 +58,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/pending_offer"
                     android:id="@+id/tvPendingOffer"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="center|right" />
             </LinearLayout>
 
         </LinearLayout>
